Adds CMS GC and GC logging